# bntr

./: .sops.yaml  flake.nix
.github/workflows/: check-flake.yaml
nix/: default.nix
nix/devenv/: default.nix
nix/home/: default.nix
nix/home/user/: default.nix  direnv.nix  firefox.nix  ghostty.nix  git.nix  gnome.nix  gpg.nix  nushell.nix  reaper.nix  ssh.nix
nix/nixos/: default.nix
nix/nixos/larstop2/: configuration.nix  default.nix  disko.nix  gate-config.yaml  gl.nix  gnome.nix  minecraft.nix  networking.nix  power.nix  sound.nix  virtualisation.nix
nix/nixos/larstop2/istercraft2/config/: DistantHorizons.toml  create_aeronautics_automated_logistics-common.toml  sablefloaters-common.toml  sodium-fingerprint.json
nix/nixos/larstop2/istercraft2/config/jei/: ingredient-list-mod-sort-order.ini  recipe-category-sort-order.ini
nix/nixos/larstop2/istercraft2/config/sound_physics_remastered/: sound_rates.properties
nix/nixos/muehml/: atticd.nix  default.nix  grafana.nix  hardware-configuration.nix  impermanence.nix  mail-server.nix  navidrome.nix  nextcloud-server.nix  pg-upgrade.nix  vaultwarden.nix
nix/secrets/: muehml.eu.yaml
projects/decl-shadow-test/: .envrc  Caddyfile  Cargo.toml  build.sh  devenv.nix  part.nix
projects/decl-shadow-test/site/: _.html  components.html  facet.js  index.html  manifest.json  style.css  svg-tutorial.html  tabs.html
projects/decl-shadow-test/src/: dom_rewriter.rs  main.rs  server.rs  ssg.rs
projects/decl-shadow-test/src/dom_rewriter/: cachebuster.rs  facet.rs  rcdom.rs
(+36 files in other folders)
